implementacion login y modo user/admin

--- a/FrontEnd/src/app/componentes/contacto/contacto.component.html
+++ b/FrontEnd/src/app/componentes/contacto/contacto.component.html
@@ -16,7 +16,7 @@
                   rounded-md
                   shadow-sm
                 "
-                placeholder="Gastón"
+                placeholder="Usuario"
               />
             </label>
             <label class="block mb-6">
@@ -33,13 +33,13 @@
                   rounded-md
                   shadow-sm
                 "
-                placeholder="rosalesG.1@ejemplo.com"
+                placeholder="usuario@user.com"
                 required
               />
             </label>
             <label class="block mb-6">
-              <span class="text-gray-700">Mensaje</span>
-              <textarea
+              <!-- <span class="text-gray-700">Mensaje</span> -->
+              <!-- <textarea
                 name="message"
                 class="
                 bg-[#FFFFD8]
@@ -51,7 +51,7 @@
                 "
                 rows="3"
                 placeholder="Dejame un comentario y me comunicaré a la brevedad :)"
-              ></textarea>
+              ></textarea> -->
             </label>
             <div class="mb-6">
               <button
@@ -66,9 +66,13 @@
                   duration-150
                   focus:shadow-outline
                   block
+                  w-full
                 "
               >
+              <a href="mailto:rosales.gaston1@gmail.com">
                 Contáctame
+              </a>
+                
               </button>
             </div>
           </form>
