--- a/FrontEnd/src/app/componentes/login/login.component.html
+++ b/FrontEnd/src/app/componentes/login/login.component.html
@@ -1,15 +1,25 @@
 <app-navbar></app-navbar>
 <div class="flex justify-center" id="patron">
-    <div class="shadow-xl sm:w-1/4 sm:h-3/5 text-center my-auto bg-[#ed6031] border-4 rounded-md p-10">
+    <div class="shadow-xl md:w-1/4 md:h-3/5 text-center my-auto bg-[#ed6031] border-4 rounded-md p-10 h-fit">
         <div class="mt-20">
-            <form class="flex justify-center mt-9" action="" class="">
-                <h4 class="font-bold font-mono text-xl">Inicio de sesion</h4>
-                <!-- <label class="block w-100" for="user">Usuario</label> -->
-                <input class="shadow-md mt-5 rounded-md mx-auto block w-100" type="text" id="user" placeholder="Usuario">
-                <!-- <label class="block w-100" for="pass">Contraseña</label> -->
-                <input class="shadow-md mt-5 rounded-md mx-auto block w-100" type="password" id="pass" placeholder="Contraseña">
-                <button class="font-mono inline-block border sm:w-2/6 my-5 rounded-md text-center bg-orange-500 hover:bg-[#9D94FF] transition" type="submit">Ingresar</button> 
+            <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+                <div class="">
+                    <h4 class="font-bold font-mono text-xl">Inicio de sesion</h4>
+
+                    <label for="nombreUsuario"></label>
+                    <input required class="shadow-md mt-5 rounded-md mx-auto block w-100" type="text" id="nombreUsuario" name="nombreUsuario" placeholder="Usuario" [(ngModel)]="nombreUsuario">
+
+                    <!-- <label class="" for="email"></label>
+                    <input required class="shadow-md mt-5 rounded-md mx-auto block w-100" type="email" id="email" placeholder="email@usuario.com"> -->
+
+                    <label for="password"></label>
+                    <input required class="shadow-md mt-5 rounded-md mx-auto block w-100" type="password" id="password" name="password" placeholder="password" [(ngModel)]="password">
+
+                    <button class="font-mono w-full border py-2 md:w-2/6 my-5 rounded-md bg-[#CEEFC1] hover:bg-[#9D94FF] transition">Ingresar</button> 
+                </div>
             </form>
         </div>
     </div>
 </div>
+
+<app-footer></app-footer>
