--- a/FrontEnd/src/app/componentes/navbar/navbar.component.html
+++ b/FrontEnd/src/app/componentes/navbar/navbar.component.html
@@ -1,39 +1,46 @@
-<div class="flex w-full justify-between items-center bg-[#9D94FF] rounded-md bg-opacity-50 ">
+<div class="flex w-full justify-between items-center bg-[#9D94FF] rounded-md bg-opacity-50">
     <div class="flex-col items-center">
       <div class="flex-col items-center my-1 mx-3 justify-center">
-          <a routerLink="/"><h1 class="text-2xl font-mono mx-auto px-1">{{persona.apellido}} {{persona.nombre}}</h1></a>
+          <a routerLink="/"><h1 class="text-2xl font-mono mx-auto px-1">Gaston Rosales</h1></a>
             <small class="font-mono text-lg mx-auto">Argentina Programa 2022 
-                <fa-icon class="mx-auto" [icon]="terminal"></fa-icon>
+                <fa-icon class="mx-auto" [icon]="terminalIco"></fa-icon>
             </small>
         </div>
     </div>
 
     
     <div class="inline-flex justify-end w-1/4">
-            <ul class="navigation block sm:flex md:flex  mx-1 px-4">
-                <li class="nav-item mx-3 flex justify-center font-mono hover:translate-x-1 border-2 rounded-md px-1 border-black">
+            <ul class="navigation block md:flex  mx-1 px-4 my-1 items-center">
+                <li class="nav-item mx-3 flex justify-center font-mono hover:translate-x-1 hover:bg-[#9D94FF] transition border-2 rounded-md px-1 border-black mt-1">
                   <a routerLink="/">Inicio</a>
                 
                 </li>
-                <li class="nav-item mx-1 flex justify-center font-mono hover:translate-x-1 border-2 rounded-md px-1 border-black">
+                <li class="nav-item mx-1 flex justify-center font-mono hover:translate-x-1 hover:bg-[#9D94FF] transition border-2 rounded-md px-1 border-black mt-1">
                   <a routerLink="/experiencia">Experiencia</a>
 
                 </li>
-                <li class="nav-item mx-1 flex justify-center font-mono hover:translate-x-1 border-2 rounded-md px-1 border-black">
+                <li class="nav-item mx-1 flex justify-center font-mono hover:translate-x-1 hover:bg-[#9D94FF] transition border-2 rounded-md px-1 border-black mt-1">
                   <a routerLink="/proyectos">Proyetos</a>
 
                 </li>
-                <li class="nav-item mx-1 flex justify-center font-mono hover:translate-x-1 border-2 rounded-md px-1 border-black">
+                <li class="nav-item mx-1 flex justify-center font-mono hover:translate-x-1 hover:bg-[#9D94FF] transition border-2 rounded-md px-1 border-black mt-1">
                   <a routerLink="/contacto">Contacto</a>
                 </li>
-                <li class="nav-item mx-1 flex justify-center font-mono hover:translate-x-1 border-2 rounded-md px-1 border-black">
+                <li class="nav-item mx-1 flex justify-center font-mono hover:translate-x-1 hover:bg-[#9D94FF] transition border-2 rounded-md px-1 border-black mt-1">
                   <a routerLink="/skills">Habilidades</a>
 
                 </li>
-                <li class="nav-item mx-1 flex justify-center font-mono hover:translate-x-1 border-2 rounded-md px-1 border-black">
-                  <a routerLink="/login" data-bs-toggle="modal" data-bs-target=""
-                    >Login</a>
+                <li *ngIf="!isLogged">
+                  <button routerLink="/login" class="nav-item mx-1 flex justify-center font-mono hover:translate-x-1 hover:bg-[#9D94FF] transition border-2 rounded-md px-1 border-black mt-1">
+                    Login
+                  </button>
                 </li>
+                <li *ngIf="isLogged">
+                  <button (click)="logOut()"  class="nav-item mx-1 flex justify-center font-mono hover:translate-x-1 hover:bg-[#9D94FF] transition border-2 rounded-md px-1 border-black mt-1">
+                    Cerrar Session
+                   </button>
+                </li>
+
             </ul>
         </div>
 
