edti/delete en componente experiencia laboral

--- a/FrontEnd/src/app/componentes/contacto/contacto.component.html
+++ b/FrontEnd/src/app/componentes/contacto/contacto.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
-    <div class="w-full md:w-96 md:max-w-full mx-auto mt-10 mb-10 bg-[#FFFFD8]">
-        <div class="p-6 border  sm:rounded-md">
-          <form method="POST" action="">
+    <div class="h-full w-2/5 mx-auto mt-10 mb-10 bg-[#FFFFD8] animate__animated animate__slideInLeft">
+        <div class="p-6 py-12 border border-black  rounded-md">
+          <form>
             <label class="block mb-6">
               <span class="text-gray-700">Nombre</span>
               <input
@@ -16,7 +16,7 @@
                   rounded-md
                   shadow-sm
                 "
-                placeholder="Usuario"
+                placeholder="Ingresa tu nombre"
               />
             </label>
             <label class="block mb-6">
@@ -33,13 +33,13 @@
                   rounded-md
                   shadow-sm
                 "
-                placeholder="usuario@user.com"
+                placeholder="Ingresa tu email "
                 required
               />
             </label>
-            <label class="block mb-6">
-              <!-- <span class="text-gray-700">Mensaje</span> -->
-              <!-- <textarea
+            <!-- <label class="block mb-6">
+              <span class="text-gray-700">Mensaje</span>
+              <textarea
                 name="message"
                 class="
                 bg-[#FFFFD8]
@@ -51,8 +51,8 @@
                 "
                 rows="3"
                 placeholder="Dejame un comentario y me comunicaré a la brevedad :)"
-              ></textarea> -->
-            </label>
+              ></textarea>
+            </label> -->
             <div class="mb-6">
               <button
                 type="submit"
@@ -69,7 +69,7 @@
                   w-full
                 "
               >
-              <a href="mailto:rosales.gaston1@gmail.com">
+              <a href="mailto:rosales.gaston1@gmail.com?">
                 Contáctame
               </a>
                 
