--- a/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
@@ -1,20 +1,10 @@
 <div class="flex">
     <div class="inline-flex w-full bg-[#FFFFD8] h-fit justify-center">
         <div class="container py-16 col-span-3 w-3/4">
-            <h1  *ngIf="lenguaje" class="font-mono  text-4xl text-center my-3">acerca de mi</h1>
-            <!-- <h1 *ngIf="!lenguaje" class="font-mono  text-4xl text-center my-3">About Me</h1> -->
+            <h1 class="font-mono  text-4xl text-center my-3">Acerca de mi</h1>
             <div class="flex justify-center items-center">
                 <div class="mb-10 ml-4 shadow-xl bg-[#CEEFC1] rounded-lg p-4 border-2 border-black font-mono  mx-5">
-                    <div *ngIf="lenguaje">
-                        <!-- {{datita.aboutMeEsp}} -->
-                        {{persona.apellido}} {{persona}}
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </div>
-                    <div *ngIf="!lenguaje">
-                        <!-- {{datita.aboutMeIng}} -->
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad, aut.
-                    </div>
-                    <!-- <button (click)="toggleLenguage()" class="flex mx-auto mt-5 border-2 border-black rounded-md p-4">Es / En</button> -->
+                    {{perfil.nombre}}
                 </div>
             </div>
         </div>
