--- a/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
+++ b/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
@@ -1,23 +1,31 @@
 <app-navbar></app-navbar>
+
 <section class="bg-[#FFFFD8] py-5 flex justify-center">
     <div class="sm:flex rounded-lg p-10 border-2 border-black w-4/5 shadow-2xl">
         <h1 class="mr-10 col-span-1 animate__animated animate__slideInUp my-auto text-center text-4xl font-mono py-5">Experiencia Laboral</h1>
         <div class="animate__animated animate__slideInLeft container sm:w-2/4 rounded-lg text-center col-span-1">
-            <li  *ngFor="let trabajo of experiencia" class="list-none">                  
-                <div class="mb-5 ml-2 list-none bg-[#CEEFC1] rounded-lg p-2 border-2 border-black">
-                    <h1 class="font-mono text-xl">{{trabajo.empresa}}</h1>
-                    <div class="absolute w-3 h-3 rounded-full mt-1.5 -left-1.5 border"></div>
-                    <time class="font-mono mb-1 text-sm font-normal leading-none">{{trabajo.anio}}</time>
-                    <h3 class="font-mono text-lg">{{trabajo.cargo}}</h3>
-                    <p class="font-mono mb-4 text-base font-normal">{{trabajo.locacion}}</p>
+            <li  *ngFor="let trabajo of expe" class="list-none">                  
+                <div class="mb-5 ml-2 bg-[#CEEFC1] rounded-lg p-2 border-2 border-black">
+                    <div *ngIf="isLogged" class="flex justify-end px-2">
+                        
+                        <button (click)="delete(trabajo.id)"><fa-icon class="text-left" [icon]="deleteIcon">Eliminar</fa-icon></button>
+                        <button><fa-icon routerLink="/editExperiencia/{{trabajo.id}}" class="mx-2" [icon]="editIcon">Editar</fa-icon></button>
+                    </div>
+                    <h1 class="font-mono text-xl">{{trabajo.nombreE}}</h1>
+                    <p class="font-mono mb-4 text-base">{{trabajo.descripcionE}} acaaaaaa</p>
                 </div>
-                <!-- componente de edicion experiencia persona -->
-                <div *ngIf="login">
-                    <app-edit-experiencia></app-edit-experiencia>
-                </div>
-                
             </li>
+            
+            <!-- componente de edicion experiencia persona -->
+            <button *ngIf="isLogged" (click)="toggleExperienciaButton()"
+             class="h-12 items-center nav-item mx-1
+             flex justify-center font-mono hover:translate-x-1 hover:bg-[#9D94FF]
+              transition border-2 rounded-md px-1 border-black mt-1">Agregar nueva Experiencia Laboral</button>
+            <div *ngIf="addNuevaExperiencia" class="my-10">
+                <app-nueva-experiencia></app-nueva-experiencia>
+            </div>
         </div>
     </div>
 </section>
+
 <app-footer></app-footer>
