--- a/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
+++ b/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
@@ -12,7 +12,7 @@
                         <button><fa-icon routerLink="/editExperiencia/{{trabajo.id}}" class="mx-2" [icon]="editIcon">Editar</fa-icon></button>
                     </div>
                     <h1 class="font-mono text-xl">{{trabajo.nombreE}}</h1>
-                    <p class="font-mono mb-4 text-base">{{trabajo.descripcionE}} acaaaaaa</p>
+                    <p class="font-mono mb-4 text-base">{{trabajo.descripcionExp}}</p>
                 </div>
             </li>
             
