--- a/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
@@ -4,7 +4,8 @@
             <h1 class="font-mono  text-4xl text-center my-3">Acerca de mi</h1>
             <div class="flex justify-center items-center">
                 <div class="mb-10 ml-4 shadow-xl bg-[#CEEFC1] rounded-lg p-4 border-2 border-black font-mono  mx-5">
-                    {{perfil.nombre}}
+                    descripcion 
+                    {{perfil.descripcion}}
                 </div>
             </div>
         </div>
