--- a/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
@@ -1,4 +1,4 @@
-<div class="flex">
+<div class="flex mt-10">
     <div class="inline-flex w-full bg-[#FFFFD8] h-fit justify-center">
         <div class="container py-16 col-span-3 w-3/4">
             <h1 class="font-mono  text-4xl text-center my-3">Acerca de mi</h1>
