--- a/FrontEnd/src/app/componentes/skills/nuevo-skill/nuevo-skill.component.html
+++ b/FrontEnd/src/app/componentes/skills/nuevo-skill/nuevo-skill.component.html
@@ -9,8 +9,8 @@
             <input class="block w-full my-1  border border-black rounded-md" type="text" name="tipo" id="tipo" required [(ngModel)]="tipo">
         </div>
         <div>
-            <label class="font-mono" for="porcentajeh">Porcentaje aprendido</label>
-            <input class="block w-full my-1  border border-black rounded-md" type="text" name="porcentajeh" id="porcentajeh" required [(ngModel)]="porcentajeH">
+            <label class="font-mono" for="porcentajeH">Porcentaje aprendido</label>
+            <input class="block w-full my-1  border border-black rounded-md" type="number" name="porcentajeH" id="porcentajeH" required [(ngModel)]="porcentajeH">
         </div>
         <button class="p-2 items-center nav-item mx-1 font-mono hover:translate-x-1 hover:bg-[#9D94FF] transition border-2 rounded-md px-1 border-black mt-1">Agregar habilidad</button>
     </form>
