--- a/FrontEnd/src/app/componentes/footer/footer.component.html
+++ b/FrontEnd/src/app/componentes/footer/footer.component.html
@@ -75,7 +75,7 @@
     <div class="font-mono text-black p-4 bg-[#9D94FF]">
       <div class="flex items-center">
         <div class="mx-auto text-gray-800">
-          Argentina Programa 2022 - Rosales Gaston
+          Desarrollado por Rosales Gaston
         </div>
         <div class="">
           <a routerLink="/"><button class=" border-2 border-black rounded-md p-2 hover:transition-all hover:bg-black hover:text-white"><i class="bi bi-arrow-up-square-fill text-xl"></i> Inicio</button></a>
