--- a/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
+++ b/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
@@ -4,7 +4,7 @@
     <div class="sm:flex rounded-lg p-10 border-2 border-black w-4/5 shadow-2xl">
         <h1 class="mr-10 col-span-1 animate__animated animate__slideInUp my-auto text-center text-4xl font-mono py-5">Experiencia Laboral</h1>
         <div class="animate__animated animate__slideInLeft container sm:w-2/4 rounded-lg text-center col-span-1">
-            <li  *ngFor="let trabajo of expe" class="list-none">                  
+            <li  *ngFor="let trabajo of expe" class="list-none hover:bg-[#CEC9FF] hover:rounded-lg p-1 hover:transition">                  
                 <div class="mb-5 ml-2 bg-[#CEEFC1] rounded-lg p-2 border-2 border-black">
                     <div *ngIf="isLogged" class="flex justify-end px-2">
                         
