--- a/FrontEnd/src/app/componentes/contacto/contacto.component.html
+++ b/FrontEnd/src/app/componentes/contacto/contacto.component.html
@@ -37,43 +37,10 @@
                 required
               />
             </label>
-            <!-- <label class="block mb-6">
-              <span class="text-gray-700">Mensaje</span>
-              <textarea
-                name="message"
-                class="
-                bg-[#FFFFD8]
-                  block
-                  w-full
-                  mt-1
-                  rounded-md
-                  shadow-sm
-                "
-                rows="3"
-                placeholder="Dejame un comentario y me comunicaré a la brevedad :)"
-              ></textarea>
-            </label> -->
             <div class="mb-6">
-              <button
-                type="submit"
-                class="
-                  h-10
-                  px-5
-                  text-indigo-100
-                  bg-[#53AC9A]
-                  rounded-lg
-                  transition-colors
-                  duration-150
-                  focus:shadow-outline
-                  block
-                  w-full
-                "
-              >
-              <a href="mailto:rosales.gaston1@gmail.com?">
-                Contáctame
-              </a>
-                
-              </button>
+            <a href="mailto:rosales.gaston1@gmail.com" class="btn btn-success flex justify-center">
+              Contáctame
+            </a>
             </div>
           </form>
         </div>
