--- a/FrontEnd/src/app/componentes/navbar/navbar.component.html
+++ b/FrontEnd/src/app/componentes/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="flex w-full justify-between items-center bg-[#9D94FF] rounded-md bg-opacity-50">
+<div class="flex w-full justify-between items-center bg-[#9D94FF] rounded-md bg-opacity-50 md:col-span-3">
     <div class="flex-col items-center">
       <div class="flex-col items-center my-1 mx-3 justify-center">
           <a routerLink="/"><h1 class="text-2xl font-mono mx-auto px-1">Gaston Rosales</h1></a>
@@ -10,7 +10,7 @@
 
     
     <div class="inline-flex justify-end w-1/4">
-            <ul class="navigation block md:flex  mx-1 px-4 my-1">
+            <ul class="navigation block md:flex md:justify-center  mx-1 px-4 my-1">
                 <li class="h-12 w-20 nav-item mx-3 flex justify-center items-center font-mono hover:translate-x-1 hover:bg-[#9D94FF] transition border-2 rounded-md px-1 border-black mt-1">
                   <a routerLink="/">Inicio</a>
                 
@@ -47,4 +47,6 @@
         </div>
 
     </div>
+
+
 <router-outlet></router-outlet>
