--- a/FrontEnd/src/app/componentes/header/header.component.html
+++ b/FrontEnd/src/app/componentes/header/header.component.html
@@ -2,7 +2,7 @@
 
 <div class="h-52 sm:w-full" id="bg">
     <div class="flex justify-center relative">
-        <img class="absolute flex mt-20 rounded-full border-2" src="{{persona.img}}" width="150px" height="150px" alt="">
+        <img class="absolute flex mt-20 rounded-full border-2" src="{{persona.img}}" width="150px" height="150px" alt="profile image">
     </div>  
 </div>
 
