--- a/FrontEnd/src/app/componentes/proyectos/proyectos.component.html
+++ b/FrontEnd/src/app/componentes/proyectos/proyectos.component.html
@@ -3,21 +3,35 @@
         <div class="animate__animated animate__fadeInLeft container p-6 sm:w-3/4 ">
             <div class="container border-2 shadow-lg bg-[#CEEFC1] border-black rounded-xl">
             <h1 class="text-4xl text-center mb-4 font-mono font-bold py-5">Proyectos personales</h1>
-            <ul class="sm:flex justify-center mx-5">
-                <li class="bg-[#FFFFD8] rounded-lg border-2 border-black m-10 font-mono font-bold text-lg text-center shadow-2xl">Weather App
-                    <a href="https://github.com/gst-n/WeatherApp-Angular" target="_blank"><img class="rounded-xl object-fill" src="../../../assets/thumbnail-proyects/Weather-app.png" width="200px" alt=""></a>
-                </li>
-                <li class="bg-[#FFFFD8] rounded-lg border-2 border-black m-10 font-mono font-bold text-lg text-center shadow-2xl">Poke-NES.dex
-                    <a href="https://github.com/gst-n/pokeNES.dex" target="_blank"><img class="rounded-xl object-fill" src="../../../assets/thumbnail-proyects/pokeApp-2.png" width="200px" alt=""></a>
-                </li>
-                <li class="bg-[#FFFFD8] rounded-lg border-2 border-black m-10 font-mono font-bold text-lg text-center shadow-2xl">Cronometro SPA - Angular
-                    <a href="https://github.com/gst-n/argPro2022-cronometro" target="_blank"><img class="object-cover" src="../../../assets/thumbnail-proyects/Cronometro-ArgentinaPrograma.png" width="200px" alt=""></a>
-                </li>
-                <li class="bg-[#FFFFD8] rounded-lg border-2 border-black m-10 font-mono font-bold text-lg text-center shadow-2xl">Portfolio Web - Angular
-                    <a href="https://github.com/gst-n/portfolio-web" target="_blank"><img class="rounded-xl object-fill" src="https://placeimg.com/200/100/any" alt=""></a>
-                </li>
-            </ul>
+                <div *ngFor="let proyecto of proyectos" class="container sm:flex justify-center mx-5">
+                    <div class="flex bg-[#FFFFD8] rounded-lg border-2 border-black m-10 font-mono font-bold text-lg text-center shadow-2xl w-2/3 h-2/6 hover:transition">
+                        <div class="w-2/4 flex-col justify-center items-center my-auto mb-2">
+                            <h2 class="">{{proyecto.nombre}}</h2>
+                            <a href="{{proyecto.urlRepositorio}}" target="_blank">
+                            <img class="rounded-xl object-fill border-black border-2 mx-auto w-2/4 h-2/4" src="{{proyecto.imgUrl}}" alt="">
+                        </a>
+                        </div>
+                        <div class="w-2/4 text-center my-2 mx-2 ">
+                            <small>
+                                {{proyecto.descripcion}}
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ut sit maiores illum mollitia soluta cum, eos pariatur necessitatibus.
+                            </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
 </div>
+
+<!-- BOTON PARA EDICION -->
+
+            <button *ngIf="isLogged" (click)="toggleProyectoButton()"
+                class="h-fit py-3 items-center nav-item
+                flex justify-center font-mono hover:translate-x-1 hover:bg-[#9D94FF]
+              transition border-2 rounded-md border-black mt-1">Agregar nuevo Proyecto
+            </button>
+              <div *ngIf="addNuevoProyecto"   class="my-10">
+                <!-- NUEVA EDUCACION ACA -->
+                <app-nueva-educacion></app-nueva-educacion>
+            </div>
 <app-footer></app-footer>
