proyecto vista modificada

--- a/FrontEnd/src/app/componentes/navbar/navbar.component.html
+++ b/FrontEnd/src/app/componentes/navbar/navbar.component.html
@@ -68,7 +68,7 @@
                   <a class="nav-item nav-link" routerLink="/experiencia">Experiencia</a>
                   <a class="nav-item nav-link" routerLink="/skills">Habilidades</a>
                   <a class="nav-item nav-link" routerLink="/educacion">Educacion</a>
-                  <a class="nav-item nav-link" routerLink="/proyectos">Proyetos</a>
+                  <a class="nav-item nav-link" routerLink="/proyectos">Proyectos</a>
                   <a class="nav-item nav-link" routerLink="/contacto" tabindex="-1">Contacto</a>
                   <a *ngIf="!isLogged" routerLink="/login" class="">
                     Iniciar Sesion
