--- a/FrontEnd/src/app/componentes/proyectos/proyectos.component.html
+++ b/FrontEnd/src/app/componentes/proyectos/proyectos.component.html
@@ -4,13 +4,13 @@
             <div class="container border-2 shadow-lg bg-[#CEEFC1] border-black rounded-xl">
             <h1 class="text-4xl text-center mb-4 font-mono font-bold py-5">Proyectos personales</h1>
                 <div *ngFor="let proyecto of proyectos" class="container sm:flex justify-center mx-5">
-                    <div *ngIf="isLogged" class="flex px-2 w-2/4">
+                    <div *ngIf="isLogged" class="flex px-2 w-1/6">
                         <button (click)="borrar(proyecto.id)" ><fa-icon class="text-left" [icon]="deleteIcon">Eliminar</fa-icon></button>
                         <button><fa-icon routerLink="/editProyecto/{{proyecto.id}}" class="mx-2" [icon]="editIcon">Editar</fa-icon></button>
                     </div>
                     <div class="flex bg-[#FFFFD8] rounded-lg border-2 border-black m-10 font-mono font-bold text-lg text-center shadow-2xl w-2/3 h-2/6 hover:transition">
-                        <div class="w-2/4 flex-col justify-center items-center my-auto mb-2">
-                            <h2 class="">{{proyecto.nombre}}</h2>
+                        <div class="w-2/4 flex-col justify-center items-center my-auto mx-auto">
+                            <h2 class="mb-2">{{proyecto.nombre}}</h2>
                             <a href="{{proyecto.urlRepositorio}}" target="_blank">
                             <img class="rounded-xl object-fill border-black border-2 mx-auto w-2/4 h-2/4" src="{{proyecto.imgUrl}}" alt="">
                         </a>
@@ -23,18 +23,18 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- BOTON PARA EDICION -->
-        
-        <button *ngIf="isLogged" (click)="toggleProyectoButton()"
-            class="h-fit py-3 items-center nav-item
-            flex justify-center font-mono hover:translate-x-1 hover:bg-[#9D94FF]
-            transition border-2 rounded-md border-black mt-1">Agregar nuevo Proyecto
-        </button>
+            <button *ngIf="isLogged" (click)="toggleProyectoButton()"
+                class="h-fit py-3 items-center nav-item
+                flex justify-center font-mono hover:translate-x-1 hover:bg-[#9D94FF]
+                transition border-2 rounded-md border-black mt-1">Agregar nuevo Proyecto
+            </button>
             <div *ngIf="addNuevoProyecto"   class="my-10">
             <!-- NUEVA PROYECTO ACA -->
             <app-nuevo-proyecto></app-nuevo-proyecto>
+            </div>
         </div>
+        <!-- BOTON PARA EDICION -->
+        
 </div>
 
 <app-footer></app-footer>
